# ecs

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  cpplint.py  ecs.dox
examples/basic/: basic.cpp
include/ecs/: Component.h  ComponentStore.h  ComponentType.h  Entity.h  Manager.h  System.h
src/: ComponentStore_test.cpp  Manager.cpp  Manager_test.cpp  System.cpp  Utils.h  ecs.dox
tests/: ComponentStore_test.cpp  Manager_test.cpp  System_test.cpp
